--- a/package.json
+++ b/package.json
@@ -10,13 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "history": "^5.0.0",
+    "install": "^0.13.0",
+    "native-base": "^2.15.2",
+    "npm": "^7.5.4",
     "react": "16.13.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.4",
-    "react-native-file-selector": "^1.0.0",
-    "react-native-fs": "^2.16.6",
+    "react-native-document-picker": "^5.0.0",
+    "react-native-gesture-handler": "^1.10.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-router-flux": "^4.2.0",
+    "react-native-screens": "^2.17.1",
     "react-native-static-server": "^0.5.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-webview": "^11.2.1"
+    "react-native-webview": "^11.2.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
