--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -38,9 +38,12 @@
     "@babel/runtime": "7.12.13",
     "@react-native-community/eslint-config": "1.1.0",
     "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
+    "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
