--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "axios": "^0.21.1",
     "history": "^5.0.0",
     "install": "^0.13.0",
@@ -25,13 +26,14 @@
     "react-native-screens": "^2.17.1",
     "react-native-static-server": "^0.5.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-webview": "^11.2.1",
+    "react-native-webview": "^10.7.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
