--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-native": "0.63.4",
     "react-native-document-picker": "^5.0.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
