--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-native": "0.63.4",
     "react-native-document-picker": "^5.0.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
@@ -27,6 +28,7 @@
     "react-native-static-server": "^0.5.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-webview": "^10.7.0",
+    "react-native-zip-archive": "^6.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
