--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "history": "^5.0.0",
     "install": "^0.13.0",
+    "loglevel": "^1.7.1",
     "native-base": "^2.15.2",
     "npm": "^7.5.4",
     "react": "16.13.1",
@@ -22,6 +23,7 @@
     "react-native-document-picker": "^5.0.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.17.1",
@@ -34,7 +36,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
