--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "ios-device": "react-native run-ios --device",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --fix"
@@ -14,6 +15,8 @@
     "axios": "^0.21.1",
     "history": "^5.0.0",
     "install": "^0.13.0",
+    "ios-deploy": "^1.11.4",
+    "lodash": "^4.17.21",
     "loglevel": "^1.7.1",
     "native-base": "^2.15.2",
     "npm": "^7.5.4",
@@ -24,6 +27,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.6.0",
+    "react-native-modal": "^11.7.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.17.1",
@@ -38,6 +42,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
+    "tailwind-rn": "^3.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
