--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-static-server": "^0.5.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tts": "^3.3.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^10.7.0",
     "react-native-zip-archive": "^6.0.2",
     "react-redux": "^7.2.2",
