--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'Reader' do
 
   pod 'react-native-get-random-values', :path => '../node_modules/react-native-get-random-values'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'ReaderTests' do
     inherit! :complete
     # Pods for testing
