--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.17.1",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-slider": "^0.11.0",
     "react-native-static-server": "^0.5.0",
+    "react-native-super-grid": "^4.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tts": "^3.3.0",
     "react-native-vector-icons": "^8.1.0",
