--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'Reader' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   target 'ReaderTests' do
     inherit! :complete
     # Pods for testing
