--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-get-random-values": "^1.6.0",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-modal": "^11.7.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
