--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-modal": "^11.7.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.17.1",
     "react-native-side-menu": "^1.1.3",
     "react-native-slider": "^0.11.0",
